force-app/main/default/objects/Service__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Service description displayed on the Services page</description>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>