force-app/main/default/objects/Service__c/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <description
  >Icon name (e.g., utility:settings) or URL for service display</description>
    <label>Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>