force-app/main/default/objects/Service__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls whether service is displayed on the Services page</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>